# aurora-engine

./: .catalog-info.yaml  .gitignore  .gitmodules  .taplo.toml  AUTHORS  CHANGES.md  CODEOWNERS  CODE_OF_CONDUCT.md  Cargo.toml  Makefile  Makefile.toml  README.md  Rakefile  TODO.md  XCC.md  backport.md  build-old.sh  clippy.toml  rust-toolchain  rustfmt.toml  verify_evm_erc20.sh
engine/: .catalog-info.yaml  Cargo.toml
engine-compat/: Cargo.toml  README.md
engine-compat/src/: lib.rs
engine-compat/src/simulate/: engine_state_override.rs  mod.rs
engine-evm/: Cargo.toml
engine-evm/src/: lib.rs  types.rs
engine-evm/src/revm/: accounting.rs  mod.rs  utility.rs
engine-evm/src/sputnikvm/: errors.rs  identity.rs  mod.rs  utility.rs
engine-hashchain/: Cargo.toml
engine-hashchain/src/: bloom.rs  error.rs  hashchain.rs  lib.rs  merkle.rs  tests.rs  wrapped_io.rs
engine-modexp/: Cargo.toml
engine-modexp/src/: arith.rs  lib.rs  mpnat.rs
engine-native/: Cargo.toml
engine-native/src/: lib.rs
engine-precompiles/: .catalog-info.yaml  Cargo.toml
engine-precompiles/src/: account_ids.rs  alt_bn256.rs  async_router.rs  blake2.rs  bn128.rs  erc20.rs  hash.rs  identity.rs  lib.rs  modexp.rs  native.rs  prelude.rs  prepaid_gas.rs  promise_result.rs  random.rs  secp256k1.rs  secp256r1.rs  set_gas_token.rs  types.rs  utils.rs  xcc.rs
engine-precompiles/src/bls12_381/: g1.rs  g1_add.rs  g1_msm.rs  g2.rs  g2_add.rs  g2_msm.rs  map_fp2_to_g2.rs  map_fp_to_g1.rs  mod.rs  pairing_check.rs
engine-precompiles/src/revm/: identity.rs  mod.rs  secp256k1.rs
engine-precompiles/src/sputnikvm/: identity.rs  mod.rs  secp256k1.rs
engine-sdk/: .catalog-info.yaml  Cargo.toml
engine-sdk/src/: base64.rs  bn128.rs  caching.rs  dup_cache.rs  env.rs  error.rs  exports.rs  io.rs  lib.rs  near_runtime.rs  prelude.rs  promise.rs  types.rs
engine-sdk/src/bls12_381/: contract.rs  g1.rs  g2.rs  mod.rs  standalone.rs
engine-standalone/: Cargo.toml
engine-standalone-nep141-legacy/: Cargo.toml
engine-standalone-nep141-legacy/src/: admin_controlled.rs  fungible_token.rs  legacy_connector.rs  lib.rs
engine-standalone-storage/: .catalog-info.yaml  Cargo.toml
engine-standalone-storage/src/: diff.rs  engine_state.rs  error.rs  ffi.rs  lib.rs  native_ffi.rs  near_api.rs  promise.rs  runner.rs  state.rs  wasmer_runner.rs
engine-standalone-storage/src/json_snapshot/: mod.rs  types.rs
engine-standalone-storage/src/relayer_db/: mod.rs  types.rs
engine-standalone-storage/src/sync/: mod.rs  types.rs
engine-standalone-tracing/: .catalog-info.yaml  Cargo.toml
engine-standalone-tracing/src/: lib.rs  sputnik.rs  types.rs
engine-standalone-tracing/src/types/: call_tracer.rs  mod.rs
engine-standalone/src/: ffi.rs  main.rs
engine-standalone/src/tests/: mod.rs  sanity.rs
engine-test-doubles/: .catalog-info.yaml  Cargo.toml
engine-test-doubles/src/: io.rs  lib.rs  promise.rs  tracing.rs
engine-tests/: .catalog-info.yaml  Cargo.toml
engine-tests-connector/: Cargo.toml
engine-tests-connector/src/: connector.rs  lib.rs  rust.rs  silo.rs  utils.rs
engine-tests-workspace/: Cargo.toml
engine-tests-workspace/src/: lib.rs  runner.rs  signer.rs
engine-tests-workspace/src/contracts/: erc20.rs  mod.rs
engine-tests-workspace/src/test_utils/: mod.rs
engine-tests-workspace/src/tests/: erc20.rs  mod.rs
engine-tests/src/: Cargo.toml  lib.rs  prelude.rs
engine-tests/src/benches/: eth_deploy_code.rs  eth_erc20.rs  eth_standard_precompiles.rs  eth_transfer.rs  mod.rs  nft_pagination.rs  uniswap.rs
engine-tests/src/test_utils/: asserts.rs  erc20.rs  exit_precompile.rs  mocked_external.rs  mod.rs  random.rs  rust.rs  self_destruct.rs  solidity.rs  standard_precompiles.rs  uniswap.rs  weth.rs
engine-tests/src/tests/: access_keys.rs  access_lists.rs  account_id_precompiles.rs  alt_bn256_precompiles.rs  async_aurora.rs  block_txs_benchmark.rs  bls12_381.rs  contract_call.rs  ecrecover.rs  eip1559.rs  erc20.rs  erc20_connector.rs  erc20_mirror.rs  eth_connector.rs  gas_discrepancy.rs  ghsa_3p69_m8gg_fwmf.rs  hashchain.rs  meta_parsing.rs  mod.rs  modexp.rs  multisender.rs  native_erc20_connector.rs  one_inch.rs  pausable_precompiles.rs  pause_contract.rs  prepaid_gas_precompile.rs  promise_results_precompile.rs  random.rs  relayer_keys.rs  repro.rs  sanity.rs  secp256r1_precompiles.rs  self_destruct_state.rs  serde.rs  silo.rs  standard_precompiles.rs  state_migration.rs  transaction.rs  uniswap.rs  upgrade.rs  (+1 more)
engine-tests/src/utils/: mocked_external.rs  mod.rs  runner.rs  rust.rs  workspace.rs
engine-traced/: Cargo.toml
engine-traced/src/: lib.rs
engine-transactions/: .catalog-info.yaml  Cargo.toml
engine-transactions/src/: backwards_compatibility.rs  eip_1559.rs  eip_2930.rs  eip_4844.rs  eip_7702.rs  legacy.rs  lib.rs
engine-types/: .catalog-info.yaml  Cargo.toml
engine-types/src/: account_id.rs  address.rs  lib.rs  parameters.rs  precompiles.rs  public_key.rs  storage.rs  types.rs
engine-types/src/parameters/: connector.rs  engine.rs  mod.rs  promise.rs  silo.rs  simulate.rs  xcc.rs
engine-types/src/types/: address.rs  balance.rs  fee.rs  gas.rs  gas_limit.rs  mod.rs  wei.rs  (+1 more)
engine-workspace/: Cargo.toml  README.md
engine-workspace-test/: Cargo.toml
engine-workspace-test/src/: lib.rs  prelude.rs
engine-workspace/src/: account.rs  contract.rs  lib.rs  macros.rs  node.rs  operation.rs  result.rs  transaction.rs
engine/src/: accounting.rs  acl.rs  admin_controlled.rs  bloom.rs  connector.rs  contract_methods.rs  deposit_event.rs  engine.rs  errors.rs  fungible_token.rs  gas_token.rs  hashchain.rs  json.rs  lib.rs  log_entry.rs  map.rs  meta_parsing.rs  metadata.rs  native_contracts.rs  parameters.rs  pausables.rs  prelude.rs  proof.rs  sdk.rs  state.rs  storage.rs  types.rs  xcc.rs
etc/async-aurora/: Cargo.toml
etc/async-aurora-test/: Cargo.toml
etc/engine-workspace-test/: Cargo.toml
etc/eth-json-test/: Cargo.toml  README.md
precompiles/: Cargo.toml
prelude/: Cargo.toml
prelude/src/: lib.rs  types.rs
sdk/: Cargo.toml
sdk/src/: lib.rs  types.rs
(+466 files in other folders)
