[workspace.package]
authors = ["Aurora Labs <hello@aurora.dev>"]
edition = "2021"
keywords = ["aurora", "engine", "evm", "blockchain"]
homepage = "https://github.com/aurora-is-near/aurora-engine"
repository = "https://github.com/aurora-is-near/aurora-engine"
license = "CC0-1.0"
readme = "README.md"
publish = false

[workspace.dependencies]
aurora-engine = { path = "engine", default-features = false }
aurora-engine-hashchain = { path = "engine-hashchain", default-features = false }
aurora-engine-precompiles = { path = "engine-precompiles", version = "1.2.0", default-features = false }
aurora-engine-sdk = { path = "engine-sdk", version = "1.2.0", default-features = false }
aurora-engine-transactions = { path = "engine-transactions", version = "1.2.0", default-features = false }
aurora-engine-types = { path = "engine-types", version = "2.0.0", default-features = false }
aurora-engine-modexp = { path = "engine-modexp", version = "1.2.0", default-features = false }
aurora-engine-test-doubles = { path = "engine-test-doubles" }
aurora-engine-workspace = { path = "engine-workspace" }
engine-standalone-storage = { path = "engine-standalone-storage" }
engine-standalone-tracing = { path = "engine-standalone-tracing", default-features = false }

anyhow = "1"
ark-bn254 = { version = "0.5", default-features = false }
ark-serialize = { version = "0.5", default-features = false }
ark-ec = { version = "0.5", default-features = false }
ark-ff = { version = "0.5", default-features = false }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
bitflags = { version = "1", default-features = false }
borsh = { version = "1", default-features = false, features = ["derive"] }
bs58 = { version = "0.5", default-features = false, features = ["alloc", "sha2"] }
bstr = "1"
cargo-near-build = "0.9"
criterion = "0.8"
ethabi = { version = "18", default-features = false }
aurora-evm = { git = "https://github.com/aurora-is-near/aurora-evm.git", branch = "v2.1.3-serde-no-std", default-features = false }
fixed-hash = { version = "0.8", default-features = false }
function_name = "0.3"
git2 = "0.20"
hex = { version = "0.4", default-features = false, features = ["alloc"] }
ibig = { version = "0.3", default-features = false, features = ["num-traits"] }
impl-serde = { version = "0.5", default-features = false }
libsecp256k1 = { version = "0.7", default-features = false }
near-crypto = "0.34.0-rc.5"
near-gas = "0.3"
near-parameters = "0.34.0-rc.5"
near-primitives = "0.34.0-rc.5"
near-primitives-core = "0.34.0-rc.5"
near-sdk = "5"
near-vm-runner = { version = "0.34.0-rc.5", features = ["wasmtime_vm", "near_vm"] }
near-workspaces = "0.21"
num = { version = "0.4", default-features = false, features = ["alloc"] }
postgres = "0.19"
primitive-types = { version = "0.13", default-features = false, features = ["rlp", "serde_no_std"] }
rand = "0.8"
ripemd = { version = "0.1", default-features = false }
rlp = { version = "0.6", default-features = false }
rocksdb = { version = "0.21", default-features = false }
serde = { version = "1", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10", default-features = false }
sha3 = { version = "0.10", default-features = false }
strum = { version = "0.27", features = ["derive"] }
tempfile = "3"
thiserror = "2.0"
tokio = { version = "1", default-features = false, features = ["macros"] }
test-case = "3.1"
walrus = "0.24"
wasmer = "6"
wee_alloc = { version = "0.4", default-features = false }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
unreadable_literal = "allow"
similar_names = "allow"
too_long_first_doc_paragraph = "allow"

[workspace]
resolver = "2"
members = [
    "engine",
    "engine-hashchain",
    "engine-test-doubles",
    "engine-modexp",
    "engine-precompiles",
    "engine-sdk",
    "engine-standalone-storage",
    "engine-standalone-tracing",
    "engine-tests",
    "engine-tests-connector",
    "engine-transactions",
    "engine-types",
    "engine-workspace",
    "engine-compat",
]

exclude = [
    "etc/tests/state-migration-test",
    "etc/tests/ft-receiver",
    "etc/tests/benchmark-contract",
    "etc/tests/self-contained-5bEgfRQ",
    "etc/tests/fibonacci",
    "etc/tests/modexp-bench",
    "etc/tests/mock-controller",
    "etc/xcc-router",
]

[profile.release]
opt-level = 3 # "z" level decreases contract size, but at the same time, increases NEAR gas consumption in some cases
debug = false
debug-assertions = false
overflow-checks = true
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.dev]
# Due to a strange bug, setting this to 3 will cause test failures
opt-level = "z"
debug = false
debug-assertions = true
overflow-checks = true
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.bench]
# lto must be enabled in the bench profile as well for
# it to actually happen when running tests with --release
lto = true
opt-level = 3

# The profile is needed for faster linking in case we need to run locally a small amount of tests or just test
# business logic rather than test gas cost. E.g. of using the profile with the cargo:
# `cargo test --profile fast-link --features mainnet-test name_of_test_we_want_execute`
[profile.fast-link]
inherits = "dev"
opt-level = 0
lto = false
