[package]
name = "aurora-engine-compat"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "abort"

[dependencies]
aurora-engine = { workspace = true, optional = true, default-features = false, features = ["tracing", "contract"] }
aurora-engine-sdk = { workspace = true, optional = true, default-features = false, features = ["contract"] }
engine-standalone-tracing = { workspace = true, optional = true, default-features = false }
borsh = { workspace = true, optional = true }
primitive-types = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wee_alloc.workspace = true

[lints]
workspace = true

[features]
contract = ["aurora-engine", "aurora-engine-sdk", "engine-standalone-tracing", "borsh", "primitive-types"]
