[package]
name = "aurora-engine-compat"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "abort"

[dependencies]
aurora-engine = { workspace = true, optional = true, default-features = false, features = ["tracing", "contract", "log", "impl-serde"] }
aurora-engine-sdk = { workspace = true, optional = true, default-features = false, features = ["contract", "log"] }
aurora-engine-modexp = { workspace = true, optional = true }
aurora-engine-transactions = { workspace = true, optional = true, features = ["impl-serde"] }
aurora-engine-types = { workspace = true, optional = true, default-features = false, features = ["impl-serde"] }
engine-standalone-tracing = { workspace = true, optional = true, default-features = false }
borsh = { workspace = true, optional = true }
primitive-types = { workspace = true, optional = true }
serde = { workspace = true, default-features = false, features = ["alloc", "derive"], optional = true }
serde_json = { workspace = true, default-features = false, features = ["alloc"], optional = true }

[lints]
workspace = true

[features]
contract = ["aurora-engine", "aurora-engine-sdk", "aurora-engine-types", "aurora-engine-modexp", "aurora-engine-transactions", "engine-standalone-tracing", "borsh", "primitive-types", "serde", "serde_json"]
