[package]
name = "aurora-engine-evm"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
autobenches = false

[dependencies]
aurora-engine-precompiles.workspace = true
aurora-engine-sdk.workspace = true
aurora-engine-types.workspace = true

# evm = { git = "https://github.com/aurora-is-near/sputnikvm.git", tag = "evm-v1.0.0-alpha.2", default-features = false, optional = true }
# evm-interpreter = { git = "https://github.com/aurora-is-near/sputnikvm.git", tag = "evm-v1.0.0-alpha.2", default-features = false, optional = true }
revm = { git = "https://github.com/bluealloy/revm", rev = "fecb507", default-features = false, optional = true }

[features]
# sputnikvm = ["evm"]
sputnikvm = []
