[package]
name = "aurora-engine-evm"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
autobenches = false

[dependencies]
aurora-engine-precompiles.workspace = true
aurora-engine-sdk.workspace = true
aurora-engine-types.workspace = true

serde.workspace = true
serde_json.workspace = true
evm = { workspace = true, features = [ "create-fixed" ], optional = true }
revm = { git = "https://github.com/bluealloy/revm", tag = "v32", default-features = false, optional = true }

[features]
default = ["evm-revm", "log"]
std = ["revm/std"]
evm-sputnikvm = ["evm"]
evm-revm = ["revm"]
integration-test = []
impl-serde = ["evm/with-serde"]
log = []
