[package]
name = "aurora-engine-evm"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
autobenches = false

[dependencies]
aurora-engine-precompiles.workspace = true
aurora-engine-sdk.workspace = true
aurora-engine-types.workspace = true

serde.workspace = true
serde_json.workspace = true
evm = { workspace = true, features = [ "create-fixed" ], optional = true }
revm = { workspace = true, optional = true }

[features]
default = ["evm-sputnikvm", "log"]
std = ["evm/std"]
evm-sputnikvm = ["evm", "aurora-engine-precompiles/precompiles-sputnikvm"]
evm-revm = ["revm", "aurora-engine-precompiles/precompiles-revm"]
integration-test = []
impl-serde = ["evm/with-serde"]
log = []
debug-commit = []
