[package]
name = "aurora-engine-modexp"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
autobenches = false

[dependencies]
hex.workspace = true
num.workspace = true
ibig.workspace = true

[features]
default = ["std"]
std = ["num/std", "ibig/std", "hex/std"]
bench = []
