[package]
name = "aurora-engine-modexp"
version = "1.2.0"
description = "Custom ModExp implementation that used in Aurora Engine"
keywords = ["modexp", "aurora", "engine"]
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
autobenches = false
publish = true

[dependencies]
hex.workspace = true
num.workspace = true
ibig = { workspace = true, optional = true }

[lints]
workspace = true

[features]
default = ["std"]
std = ["num/std", "hex/std"]
bench = ["ibig"]
