[package]
name = "aurora-engine-native"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
aurora-engine = { workspace = true, features = ["std", "contract"] }
aurora-engine-sdk.workspace = true

[lints]
workspace = true
