[package]
name = "aurora-engine-native"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
aurora-engine = { workspace = true, features = ["std", "tracing"] }
aurora-engine-sdk = { workspace = true, features = ["std"] }
aurora-engine-types.workspace = true
engine-standalone-tracing.workspace = true

[lints]
workspace = true

[features]
integration-test = ["aurora-engine/integration-test"]
