[package]
name = "aurora-engine-precompiles"
version = "1.2.0"
description = "Set of precompiles that used in Aurora Engine"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
autobenches = false
publish = true

[dependencies]
aurora-engine-modexp.workspace = true
aurora-engine-sdk.workspace = true
aurora-engine-types.workspace = true
aurora-evm.workspace = true
ethabi.workspace = true
hex.workspace = true
num.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
aurora-engine-test-doubles.workspace = true
rand.workspace = true

[lints]
workspace = true

[features]
default = ["std"]
std = ["aurora-engine-types/std", "aurora-engine-sdk/bn254", "aurora-engine-sdk/std", "aurora-evm/std", "ethabi/std", "serde/std", "serde_json/std"]
contract = ["aurora-engine-sdk/bn254", "aurora-engine-sdk/contract"]
log = []
error_refund = []
