[package]
name = "aurora-engine-sdk"
version = "1.2.0"
description = "SDK that used in Aurora Engine"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
autobenches = false
publish = true

[dependencies]
aurora-engine-types.workspace = true
base64.workspace = true
libsecp256k1 = { workspace = true, features = ["static-context", "hmac"], optional = true }
ripemd = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
sha3 = { workspace = true, optional = true }

[dev-dependencies]
hex.workspace = true

[lints]
workspace = true

[features]
std = ["aurora-engine-types/std", "base64/std", "libsecp256k1/std", "ripemd/std", "sha2/std", "sha3/std"]
contract = ["libsecp256k1", "ripemd", "sha2", "sha3"]
log = []
all-promise-actions = []
