[package]
name = "aurora-engine-standalone-nep141-legacy"
version = "0.1.0"
edition = "2021"
authors = ["Aurora Labs <hello@aurora.dev>"]
description = "Aurora engine standalone NEP-141 legacy library. Provides the legacy NEP-141 code used by the standalone engine."
homepage = "https://github.com/aurora-is-near/aurora-engine"
repository = "https://github.com/aurora-is-near/aurora-engine"
license = "CC0-1.0"
publish = false
autobenches = false

[lib]
crate-type = ["lib"]

[dependencies]
aurora-engine = { path = "../engine", default-features = false, features = ["std"] }
aurora-engine-types = { path = "../engine-types", default-features = false, features = ["std"] }
aurora-engine-sdk = { path = "../engine-sdk", default-features = false, features = ["std"] }
borsh = "0.9.3"
serde = "1"
serde_json = "1"

[features]
