[package]
name = "aurora-engine-standalone-nep141-legacy"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description = "Aurora engine standalone NEP-141 legacy library. Provides the legacy NEP-141 code used by the standalone engine."
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
autobenches = false

[lib]
crate-type = ["lib"]

[dependencies]
aurora-engine = { workspace = true, features = ["std"] }
aurora-engine-modexp = { workspace = true, features = ["std"] }
aurora-engine-types = { workspace = true, features = ["std"] }
aurora-engine-sdk = { workspace = true, features = ["std"] }
serde.workspace = true
serde_json.workspace = true

[features]
