[package]
name = "engine-standalone-storage"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description = "Aurora engine standalone storage library. Provides the storage backend used by the standalone engine."
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
autobenches = false

[lib]
crate-type = ["lib"]

[dependencies]
aurora-engine = { workspace = true, features = ["std"] }
aurora-engine-types = { workspace = true, features = ["std"] }
aurora-engine-modexp = { workspace = true, features = ["std"] }
aurora-engine-precompiles = { workspace = true, features = ["std"] }
aurora-engine-sdk = { workspace = true, features = ["std"] }
aurora-engine-transactions = { workspace = true, features = ["std"] }
evm-core.workspace = true
hex = { workspace = true, default-features = true }
rocksdb.workspace = true
postgres.workspace = true
serde = { workspace = true, default-features = true }
serde_json = { workspace = true, default-features = true }

[features]
default = ["snappy", "lz4", "zstd", "zlib"]
borsh-compat = ["aurora-engine-types/borsh-compat", "aurora-engine-sdk/borsh-compat", "aurora-engine-precompiles/borsh-compat", "aurora-engine/borsh-compat"]
mainnet = []
testnet = []
snappy = ["rocksdb/snappy"]
lz4 = ["rocksdb/lz4"]
zstd = ["rocksdb/zstd"]
zlib = ["rocksdb/zlib"]
bzip2 = ["rocksdb/bzip2"]
