[package]
name = "engine-standalone-tracing"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "Aurora engine standalone tracing library. Provides functions and types for extracing geth-like traces from standalone engine execution."
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
autobenches = false

[lib]
crate-type = ["lib"]

[dependencies]
aurora-engine-types = { workspace = true }
evm-core.workspace = true
evm = { workspace = true, features = ["tracing"] }
evm-runtime.workspace = true
evm-gasometer.workspace = true
hex = { workspace = true }
serde = { workspace = true, optional = true }
borsh.workspace = true

[features]
default = []
mainnet = []
testnet = []
impl-serde = ["aurora-engine-types/impl-serde", "serde"]
