[package]
name = "engine-standalone-tracing"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "Aurora engine standalone tracing library. Provides functions and types for extracting geth-like traces from standalone engine execution."
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
autobenches = false

[lib]
crate-type = ["lib"]

[dependencies]
aurora-engine-types = { workspace = true }
aurora-evm = { workspace = true, features = ["tracing"] }
hex = { workspace = true }
serde = { workspace = true, optional = true }
borsh.workspace = true

[lints]
workspace = true

[features]
default = []
mainnet = []
testnet = []
impl-serde = ["aurora-engine-types/impl-serde", "serde"]
